--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build": "npm run build:css && remix vite:build",
+    "build:css": "tailwindcss -o ./app/tailwindcss.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix vite:dev\" \"npm:json-server\" ",
+    "dev:css": "tailwindcss -o ./app/tailwindcss.css --watch",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@remix-run/node": "^2.9.1",
@@ -16,7 +19,8 @@
     "@remix-run/serve": "^2.9.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
@@ -24,12 +28,16 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "concurrently": "^8.2.2",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "json-server": "^1.0.0-alpha.23",
+    "remix-flat-routes": "^0.6.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
